--- a/Front/styles.css
+++ b/Front/styles.css
@@ -1,8 +1,14 @@
+body {
+    background-color: #6e6e6e;
+}
 .board {
     display: grid;
 }
 
 .cell {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     border: 1px solid #ccc;
     width: 50px;
     height: 50px;
@@ -12,20 +18,16 @@
 }
 
 .hidden {
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
     box-shadow: inset 0.2em 0.2em 0.2em 0 rgba(255, 255, 255, 0.5), inset -0.2em -0.2em 0.2em 0 rgba(0, 0, 0, 0.5);
     background-color: rgb(184, 184, 184);
     /* border: 4px solid #000000; */
 }
-/*
-.clicked {
 
+.hidden:hover {
+    -webkit-filter: brightness(50%);
 }
 
 .flagged {
-
+    background-color: rgb(185, 50, 50);
+    background-image: url(Resources/flag.png);
 }
-
-*/
